test/spec_vectors/simd_i64x2_arith/fail/module_7.wat
(module (func $i64x2.add-arg-empty (result v128) (i64x2.add)))